# py-juxlib

./: .editorconfig  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-release.yml  security.yml  test.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-adopt-development-best-practices.md  0003-use-python-technology-stack.md  0004-jxz-container-building.md  0004-operations-best-practices.md  0005-package-submission-endpoint.md  README.md
docs/architecture/: workspace.dsl
docs/reference/: quality-configuration.md
docs/sprints/: README.md  sprint-01-backlog.md  sprint-01-plan.md  sprint-01-retrospective.md  sprint-02-backlog.md  sprint-02-plan.md  sprint-02-retrospective.md  sprint-03-plan.md  sprint-03-retrospective.md
src/juxlib/: __init__.py
src/juxlib/api/: __init__.py  client.py  models.py
src/juxlib/config/: __init__.py  manager.py  schema.py
src/juxlib/errors/: __init__.py  codes.py  exceptions.py
src/juxlib/metadata/: __init__.py  ci.py  detection.py  git.py  models.py  project.py
src/juxlib/signing/: __init__.py  keys.py  signer.py  verifier.py  xml.py
src/juxlib/storage/: __init__.py  filesystem.py
tests/: __init__.py  conftest.py  test_version.py
tests/fixtures/: __init__.py  generate-test-certs.sh  sample-report.xml  test-cert.pem  test-ec-cert.pem  test-ec-private.pem  test-private.pem
tests/integration/: test_config_storage.py  test_e2e_workflow.py
tests/unit/: __init__.py  test_api_client.py  test_config.py  test_errors.py  test_metadata.py  test_signing.py  test_signing_fixtures.py  test_storage.py
